Support port-forwarding directly to Tart Guest Agent (#489)
